src/test/ui/compile-fail-migration/closure-expected-type/expect-two-infer-vars-supply-ty-with-bound-region.stderr
error[E0282]: type annotations needed
  --> $DIR/expect-two-infer-vars-supply-ty-with-bound-region.rs:18:27
   |
LL |     with_closure(|x: u32, y| {}); //~ ERROR E0282
   |                           ^ consider giving this closure parameter a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
